# NLP-for-querying-data

./: LICENSE  NLP for querying (Open)Data.ipynb  README.md  Slides.odp  dataset.xlsx  docker-compose.yml  example.py  launch.sh  pyproject.toml
Dockerfile/: app.dockerfile
app/: Class_NLP_Query.py  PBG_Bot.py  bot.py  config.json  main.py
app/data/: sentences_generated.txt  sentences_origin.txt
app/models/: classifier.pickle  crf_model.pickle  label_encoder.pickle  vocabulary.pickle
notebook/: Class_NLP_Query.ipynb  NLP for querying (Open)Data.ipynb  Presentazione.ipynb  Untitled.ipynb
