[tool.poetry]
name = "nlp-for-querying-data"
version = "0.1.0"
description = "Semplice script da usare com Bot per estrarre dati da un file"
authors = ["nick87ds"]

[tool.poetry.dependencies]
python = "^3.8, < 3.10"
numpy = "^1.21.4"
pandas = "^1.3.4"
sklearn = "^0.0"
sklearn-crfsuite = "^0.3.6"
spacy = "^3.2.0"
dateparser = "^1.1.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
